# wernerpy

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
docs/: conf.py  index.rst
docs/api/: modules.rst
wernerpy/: __init__.py
wernerpy/geometry/: __init__.py  cylinder.py  ray.py  vector.py
wernerpy/test/: conftest.py
wernerpy/utils/: logging.py  package_data.py
